# phantom

./: README.md  REBUILD.md  action.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
phantom/: __init__.py  audit.py  bytecode.py  cache.py  cli.py  core.py  differ.py  errors.py  models.py  rebuild.py  registry.py  risk.py  sourcemaps.py  spans.py
phantom/ecosystems/: __init__.py  base.py  forges.py  github.py  npm.py  pypi.py
phantom/normalizers/: __init__.py  base.py  python_ast.py  raw.py
phantom/report/: __init__.py  json.py  sarif.py  table.py
tests/: conftest.py  test_audit.py  test_bytecode.py  test_cli.py  test_forges.py  test_network.py  test_normalizer.py  test_npm.py  test_pypi.py  test_rebuild.py  test_reports.py  test_risk.py  test_scan.py  test_sourcemaps.py  test_spans.py
tests/fixtures/benign/wheel/mypkg/: __init__.py
tests/fixtures/benign/wheel/mypkg-1.0.0.dist-info/: METADATA
tests/fixtures/injected/source/mypkg/: core.py
tests/fixtures/injected/wheel/mypkg/: _telemetry.py  core.py
tests/fixtures/injected/wheel/mypkg-1.0.0.dist-info/: RECORD
tests/fixtures/span_injected/source/: README.md
tests/fixtures/span_injected/source/mypkg/: __init__.py
tests/fixtures/span_injected/wheel/mypkg/: core.py
