[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-scan"
version = "0.1.0"
description = "Detect divergence between a package's declared source and its published artifact"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# Zero runtime dependencies by design (NFR-8): stdlib only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
phantom = "phantom.cli:main"

[tool.setuptools.packages.find]
include = ["phantom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: integration tests that hit PyPI/GitHub (set PHANTOM_NETWORK_TESTS=1 to run)",
]
